# abelian-sandpile-model

./: CMakeLists.txt  README.md
modules/: CMakeLists.txt
modules/src/arguments_parsing/: arguments_parsing.cpp  arguments_parsing.h
modules/src/file_reading/: file_reading.cpp  file_reading.h
modules/src/picture_processing/: picture_processing.cpp  picture_processing.h
modules/src/sandpile_processing/: sandpile_processing.cpp  sandpile_processing.h
